Fix Bottom Margin on Action Icons on Tablet
- Add display: inline-block and margin-bottom: 20px to Icon class in
Action component when screen size exceeds 600px width

--- a/src/components/Actions/Action/Action.module.css
+++ b/src/components/Actions/Action/Action.module.css
@@ -13,6 +13,8 @@
 
 @media (min-width: 600px) {
   .Icon {
+    display: inline-block;
+    margin-bottom: 20px;
     position: relative;
     top: 5px;
   }
